tests/rosetta/out/Java/associative-array-creation.error
javac: exit status 1
/tmp/AssociativeArrayCreation.java:19: error: incompatible types: Integer cannot be converted to Map<String,Integer>
        Map<String,Integer> y1 = x.get("bar");
                                      ^
1 error
