tests/rosetta/out/Java/associative-array-creation.java
// Generated by Mochi compiler v0.10.30 on 2006-01-02T15:04:05Z
// associative-array-creation.mochi
import java.util.*;

public class AssociativeArrayCreation {
    static Map<String,Integer> removeKey(Map<String,Integer> m, String k) {
        Map<String,Integer> out = new LinkedHashMap<String,Integer>();
        for (String key : m.keySet()) {
            if (!Objects.equals(key, k)) {
                out.put(key, m.get(key));
            }
        }
        return out;
    }
    static void main() {
        Map<String,Integer> x = null;
        x = new LinkedHashMap<String,Integer>();
        x.put("foo", 3);
        Map<String,Integer> y1 = x.get("bar");
        boolean ok = x.containsKey("bar");
        System.out.println(y1);
        System.out.println(ok);
        x = removeKey(x, "foo");
        x = new LinkedHashMap<>(Map.ofEntries(Map.entry("foo", 2), Map.entry("bar", 42), Map.entry("baz", -1)));
        System.out.println(x.get("foo") + " " + x.get("bar") + " " + x.get("baz"));
    }
    public static void main(String[] args) {
        main();
    }
}
